--- a/locales/ka/translations.json
+++ b/locales/ka/translations.json
@@ -66,7 +66,8 @@
         "populars":"პოპულარულები",
         "zoomIn":"გადიდება",
         "favorites":"ფავორიტები",
-        "cart":"კალათა"
+        "cart":"კალათა",
+        "priuses":"პრიუსის ნაწილები"
     },
     "simillars": {
         "simillars":"მსგავსი პროდუქტები",
@@ -80,7 +81,8 @@
         "register":"რეგისტრაცია",
         "forgotPassword":"დაგავიწყდათ პაროლი?",
         "userPlaceholder":"შეიყვანეთ მეილი",
-        "passwordPlaceholder":"შეიყვანეთ პაროლი"
+        "passwordPlaceholder":"შეიყვანეთ პაროლი",
+        "toasterInfo":"სისტემაში შესასვლელად გთხოვთ გაიაროთ რეგისტრაცია ან ავტორიზაცია"
     },
     "errors": {
         "unauthorized":"თქვენ არ ხართ ავტორიზებული, გთხოვთ გაიაროთ რეგისტრაცია ან ავტორიზაცია",
@@ -111,7 +113,7 @@
         "english":"ინგლისური"
     },
     "fixedPrice": {
-        "cart":"In cart"
+        "cart":"კალათაში"
     },
     "cartPrice": {
         "ebuy":"გამოწერა"
@@ -122,5 +124,11 @@
         "search":"ძიება",
         "cart":"კალათა",
         "user":"ანგარიში"
+    },
+    "sliderd": {
+        "search":"ხშირად ეძებენ",
+        "service":"სერვისის სრულყოფისთვის კონკრეტულ მომენტში გთავაზობთ იმ პროდუქტს, რომელიც იმ მომენტში ყველაზე პოპულარულია",
+        "seeAll":"ყველას ნახვა",
+        "detailed":"დეტალურად"
     }
 }
